@@ -23,9 +23,10 @@
 
 import jdk.incubator.code.*;
 import jdk.incubator.code.dialect.core.CoreOp;
-import jdk.incubator.code.extern.ExternalizableOp;
 import jdk.incubator.code.dialect.core.CoreType;
 import jdk.incubator.code.dialect.core.FunctionType;
+import jdk.incubator.code.extern.ExternalizedOp;
+
 import java.util.*;
 import java.util.function.Consumer;
 
@@ -37,7 +38,7 @@ public final class AnfDialect {
     }
 
     @OpDeclaration(AnfLetOp.NAME)
-    public static final class AnfLetOp extends ExternalizableOp implements Op.Terminating, Op.Nested {
+    public static final class AnfLetOp extends Op implements Op.Terminating, Op.Nested {
         public static final String NAME = "anf.let";
 
         public static class Builder {
@@ -62,9 +63,7 @@ public final class AnfDialect {
         final Body bindings;
 
         public AnfLetOp(ExternalizedOp def) {
-            super(def);
-
-            this.bindings = def.bodyDefinitions().get(0).build(this);
+            this(def.bodyDefinitions().get(0));
         }
 
         public AnfLetOp(AnfLetOp that, CopyContext cc, OpTransformer ot) {
@@ -97,7 +96,7 @@ public final class AnfDialect {
 
 
     @OpDeclaration(AnfLetRecOp.NAME)
-    public static final class AnfLetRecOp extends ExternalizableOp implements Op.Terminating, Op.Nested {
+    public static final class AnfLetRecOp extends Op implements Op.Terminating, Op.Nested {
         public static final String NAME = "anf.letrec";
 
         public static class Builder {
@@ -122,9 +121,7 @@ public final class AnfDialect {
         final Body bindings;
 
         public AnfLetRecOp(ExternalizedOp def) {
-            super(def);
-
-            this.bindings = def.bodyDefinitions().get(0).build(this);
+            this(def.bodyDefinitions().get(0));
         }
 
         public AnfLetRecOp(AnfLetRecOp that, CopyContext cc, OpTransformer ot) {
@@ -166,7 +163,7 @@ public final class AnfDialect {
     }
 
     @OpDeclaration(AnfIfOp.NAME)
-    public static final class AnfIfOp extends ExternalizableOp implements Op.Terminating, Op.Nested {
+    public static final class AnfIfOp extends Op implements Op.Terminating, Op.Nested {
         public static final String NAME = "anf.if";
 
         public static class ThenBuilder {
@@ -209,11 +206,10 @@ public final class AnfDialect {
 
         final Body then_, else_;
 
-        public AnfIfOp(ExternalizableOp.ExternalizedOp def) {
-            super(def);
-
-            this.then_ = def.bodyDefinitions().get(0).build(this);
-            this.else_ = def.bodyDefinitions().get(1).build(this);
+        public AnfIfOp(ExternalizedOp def) {
+            this(def.operands().getFirst(),
+                    def.bodyDefinitions().get(0),
+                    def.bodyDefinitions().get(1));
         }
 
         public AnfIfOp(AnfIfOp that, CopyContext cc, OpTransformer ot) {
@@ -259,7 +255,7 @@ public final class AnfDialect {
     }
 
     @OpDeclaration(AnfFuncOp.NAME)
-    public static final class AnfFuncOp extends ExternalizableOp implements Op.Nested {
+    public static final class AnfFuncOp extends Op implements Op.Nested {
 
         public static class Builder {
             final Body.Builder ancestorBody;
@@ -295,14 +291,7 @@ public final class AnfDialect {
                         case String s -> s;
                         case null, default -> throw new UnsupportedOperationException("Unsupported func name value:" + v);
                     });
-            return new AnfFuncOp(def, funcName);
-        }
-
-        AnfFuncOp(ExternalizedOp def, String funcName) {
-            super(def);
-
-            this.funcName = funcName;
-            this.body = def.bodyDefinitions().get(0).build(this);
+            return new AnfFuncOp(funcName, def.bodyDefinitions().get(0));
         }
 
         AnfFuncOp(AnfFuncOp that, CopyContext cc, OpTransformer oa) {
@@ -335,10 +324,8 @@ public final class AnfDialect {
         }
 
         @Override
-        public Map<String, Object> attributes() {
-            HashMap<String, Object> m = new HashMap<>(super.attributes());
-            m.put("", funcName);
-            return Collections.unmodifiableMap(m);
+        public Map<String, Object> externalize() {
+            return Map.of("", funcName);
         }
 
         public FunctionType invokableType() {
@@ -360,11 +347,11 @@ public final class AnfDialect {
     }
 
     @OpDeclaration(AnfApply.NAME)
-    public static final class AnfApply extends ExternalizableOp implements Op.Terminating {
+    public static final class AnfApply extends Op implements Op.Terminating {
         public static final String NAME = "anf.apply";
 
         public AnfApply(ExternalizedOp def) {
-            super(def);
+            this(def.operands());
         }
 
         public AnfApply(AnfApply that, CopyContext cc) {
@@ -396,7 +383,7 @@ public final class AnfDialect {
     }
 
     @OpDeclaration(AnfApplyStub.NAME)
-    public static final class AnfApplyStub extends ExternalizableOp implements Op.Terminating {
+    public static final class AnfApplyStub extends Op implements Op.Terminating {
         public static final String NAME = "anf.apply.stub";
         public static final String ATTRIBUTE_RESULT_TYPE = ".resultType";
         public static final String ATTRIBUTE_CALLSITE_NAME = ".callsiteName";
@@ -414,13 +401,7 @@ public final class AnfDialect {
                         case String s -> s;
                         case null, default -> throw new UnsupportedOperationException("Unsupported func name value:" + v);
                     });
-            return new AnfApplyStub(def,callsiteName,def.resultType());
-        }
-
-        public AnfApplyStub(ExternalizedOp def, String name, TypeElement resultType) {
-            super(def);
-            this.resultType = resultType;
-            this.callSiteName = name;
+            return new AnfApplyStub(callsiteName, def.operands(), def.resultType());
         }
 
         public AnfApplyStub(AnfApplyStub that, CopyContext cc) {
@@ -430,10 +411,8 @@ public final class AnfDialect {
         }
 
         @Override
-        public Map<String, Object> attributes() {
-            HashMap<String, Object> m = new HashMap<>(super.attributes());
-            m.put("", callSiteName);
-            return Collections.unmodifiableMap(m);
+        public Map<String, Object> externalize() {
+            return Map.of("", callSiteName);
         }
 
         @Override
